@@ -1,5 +1,5 @@
 .TH MIX 1 "Mixmaster Version 3.0 beta"
-.\" $Id: mix.1,v 1.8 2002/08/21 06:53:44 rabbi Exp $
+.\" $Id: mix.1,v 1.9 2002/08/21 11:22:36 weaselp Exp $
 .SH NAME
 mix \- anonymous remailer software
 .SH SYNOPSIS
@@ -360,7 +360,9 @@ it specifies the path to a program. If it contains an
 .B @
 sign, the message is forwarded to the given address (with an
 .B X-Loop:
-header to prevent mail loops), otherwise the message is appended
+header to prevent mail loops). If it ends with a
+.B /
+it is threated as a Maildir, otherwise the message is appended
 to the given file name or written to standard output if
 .B MAILBOX
 is
